# py-couchdb

./: .bumpversion.cfg  .gitignore  .travis.yml  CHANGES.rst  CONTRIBUTING.md  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  runtests_with_coverage.sh  setup.py  tests.py
.circleci/: config.yml
.github/workflows/: main.yml
docs/: Makefile
docs/source/: api.rst  conf.py  index.rst  install.rst  quickstart.rst  views.rst
docs/source/_themes/kr/: layout.html
pycouchdb/: __init__.py  backup.py  client.py  exceptions.py  feedreader.py  resource.py  types.py  utils.py  view.py
scripts/: couchtest.txt
test/: conftest.py  functional_tests.py  integration_tests.py  test_database.py  test_exceptions.py  test_feedreader.py  test_functional.py  test_integration.py  test_resource.py  test_server.py  test_utils.py
test/integration/: README.md  conftest.py  test_error_scenarios.py  test_integration.py
