[project]
name = "pycouchdb"
version = "1.16.0"
description = "Modern pure python CouchDB Client."
authors = [
    {name = "Andrey Antukh", email = "niwi@niwi.be"},
    {name = "Rinat Sabitov", email = "rinat.sabitov@gmail.com"}
]
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["couchdb", "database"]
classifiers = [
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "requests>=2.32.5",
    "chardet>=5.2.0"
]

[project.urls]
Homepage = "https://github.com/histrio/py-couchdb"
Documentation = "https://pycouchdb.readthedocs.io/en/latest/"
Repository = "https://github.com/histrio/py-couchdb"

[project.optional-dependencies]
dev = [
    "responses>=0.25.0",
    "flake8>=7.0",
    "pytest>=8.0",
    "pytest-cov>=5.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
